// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItem > renders a danger icon and a custom icon 1`] = `
<div>
  <ul>
    <li
      class="flex items-center gap-2.5"
    >
      <span
        class="antialiased font-inter text-base font-normal text-pca-red-500 dark:text-pca-red-500 flex shrink-0"
      >
        <svg
          aria-hidden="true"
          class="h-4.5 w-4.5"
          fill="transparent"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18L18 6M6 6L18 18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium"
      >
        No access control
      </span>
    </li>
  </ul>
</div>
`;

exports[`ListItem > renders the check icon with theme colors by default 1`] = `
<div>
  <ul>
    <li
      class="flex items-center gap-2.5"
    >
      <span
        class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-white flex shrink-0"
      >
        <svg
          aria-hidden="true"
          class="h-4.5 w-4.5"
          fill="transparent"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium"
      >
        Unlimited docs
      </span>
    </li>
  </ul>
</div>
`;
